--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Mahtab Noor Shaan!</h1>
+        		<h1>Hi there, I'm Shaan!</h1>
 				<p>I'm from Dhaka, Bangladesh and currently living in Tokyo, Japan. This is my attempt on writing about...stuffs! <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
