--- a/index.html
+++ b/index.html
@@ -1,30 +1,9 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Mahtab Noor Shaan</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Shaan!</h1>
-				<p>I'm from Dhaka, Bangladesh and currently living in Tokyo, Japan. This is my attempt on writing about...stuffs! <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:mahtab.shaan@gmail.com">email</a></li>
-        		<li><a href="https://github.com/MahtabShaan">github.com/MahtabShaan</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Mahtab Noor Shaan
+---
+
+<div class="blurb">
+	<h1>Hi there, I'm Shaan!</h1>
+		<p>I'm from Dhaka, Bangladesh and currently living in Tokyo, Japan. This is my attempt on writing about...stuffs! <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
